# FSPC

./: README.md  battery.bat  battery.py  conseils_Turek.txt  idea_for_converg.txt  main.py  msh2vtu.py  run.bat  run.sh
FSPC/: Manager.py  ShapeFunction.py  Toolbox.py  __init__.py  toolbox.py
FSPC/algorithm/: Algorithm.py  BlockGauss.py  LeastSquare.py  MultiVector.py  __init__.py  algorithm.py  blockGauss.py  block_gauss.py  leastSquare.py  leastSquares.py  least_square.py  multiVector.py  multi_vector.py
FSPC/general/: Element.py  Manager.py  Toolbox.py  __init__.py  manager.py  residual_manager.py  time_manager.py  toolbox.py
FSPC/interpolator/: BasisFunction.py  ElemTransfer.py  ElementTransfer.py  Interpolator.py  NearestNeigh.py  __init__.py  basisFunction.py  basis_function.py  interpolator.py  k_neighbour.py  linear_projection.py  nearNeigh.py  nearestNeigh.py  nearest_neighbour.py  plate_spline_cuda.py  plate_spline_cupy.py  radialBasis.py  radial_basis_function.py  thin_plate_spline.py  wendland_function.py
FSPC/solver/: Metafor.py  Pfem3D.py  metafor.py  pfem_3D.py
battery/: battery.py  bending_flap.py  clamped_beam_3D.py  dam_break.py  dam_break_2D.py  mooney_hyper_2D.py  sloshing_flap.py  thermo_sphere_3D.py  thermo_square.py  vertical_container.py  vertical_container_2D.py
battery/rank_files/: rankfile_1.txt  rankfile_2.txt  rankfile_3.txt  rankfile_4.txt
doc/: Index.md
examples/: test_interp.py  toolbox.py  toolbox_2D.geo  toolbox_3D.geo  vtu_converter.py
examples/FangBaoTian/: geometry.geo  geometry.msh  input.py  input_meta.py  input_pfem.lua
examples/FangBaoTianTEST/: geometry.geo  geometry.msh  input.py  input_meta.py  input_pfem.lua
examples/GuiFourey/: geometry.msh  input.py  input_meta.py  input_pfem.lua
graphs/: GuiFourey.py  MarcoLucio3D.py  StefanTurek.py  ZiFeiMeng3D.py  plotFangBaoTian.py  plotMacroLucio.py  plotSimoneMeduri.py  plotZiFeiMeng.py
pyStream/: CMakeLists.txt  PythonStream.cpp  PythonStream.h  PythonStream.i  compile.sh  python_stream.cpp  python_stream.h  python_stream.i
source/: __init__.py  criterion.py  interpolator.py  master.py  tools.py
validation/: GuiFourey.py  MarcoLucio.py  MarcoLucio3D.py  MarcoLucio_2D.py  MarcoLucio_3D.py  SimoneMeduri.py  SimoneMeduri_2D.py  StefanTurek.py  StefanTurek_2D.py  ZiFeiMeng.py  ZiFeiMeng3D.py  ZiFeiMeng_2D.py  ZiFeiMeng_3D.py  checkInterp2D.py  checkInterp3D.py  crossFlow.py  parula.py  vortexNcomp.py
(+674 files in other folders)
